# ahri

./: .gitignore  cookiecutter.json
hooks/: pre_gen_project.py
{{cookiecutter.project_name}}/: pyproject.toml  tox.ini
{{cookiecutter.project_name}}/{{cookiecutter.package_name}}/: __init__.py  _logging.py  exc.py  settings.py
