[tool.poetry]
name = "{{ cookiecutter.project_name }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.project_short_description}}"
authors = ["{{ cookiecutter.author_name }} <{{ cookiecutter.author_email }}>"]


[tool.poetry.dependencies]
# List project dependencies here
python = "^3.6"
structlog = "^20.1.0"
python-dotenv = "^0.15.0"
pydantic = "^1.7.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
pytest = "^5.2"
pylint = "^2.5.3"
black = "^19.10b0"
colorama = "^0.4.3"
autopep8 = "^1.5.3"
docformatter = "^1.3.1"
mypy = "^0.790"
bandit = "^1.6.2"
isort = "^5.6.4"